body.modal-open added to stop fixed navbar jumping when modal is triggered

--- a/resources/form.css
+++ b/resources/form.css
@@ -191,6 +191,11 @@ p.plus {
 	background: #277752;
 }
 
+body.modal-open {
+	overflow: inherit;
+	padding-right: 0 !important;
+  }
+
 .modal-container {
 	position: relative;
 	max-width: 310px;
