--- a/resources/index.css
+++ b/resources/index.css
@@ -4,7 +4,7 @@
   }
 
   body::-webkit-scrollbar {
-		width: 10px;
+		width: 15px;
 	}
 	 
 	body::-webkit-scrollbar-track {
